--- a/style.css
+++ b/style.css
@@ -51,13 +51,13 @@ nav {
   }
 
 .sidebar {
-  background-color: #af7045;
+  background-color: rgba(0, 0, 0, 0.2);
   color: white;
   width: 250px;
   padding: 20px;
   position: absolute;
   right: 0;
-  height: 100vh;
+  height: 82.8vh;
 }
 
 #round-list {
@@ -148,11 +148,11 @@ nav {
     /* max-width: 100%;
     height: auto;
     margin-top: 10px; */
-    margin-top: 20px;
+    margin-top: 30px;
   text-align: center;
   color: green;
   font-weight: 900;
-  font-size: 2rem;
+  font-size: 3rem;
 }
 .button-container{
     display: flex;
