--- a/style.css
+++ b/style.css
@@ -10,7 +10,15 @@ body {
     font-family: Arial, sans-serif;
     background-color: #e90849;
     color: #333;
+    /* display: flex;
+    flex-direction: column; */
 }
+.footer {
+    background-color: rgba(0, 0, 0, 0.2);
+    padding: 24px;
+    text-align: center;
+    color:  white;
+  }
 p img{
     height: 20rem;
     width: 20rem;
