--- a/style.css
+++ b/style.css
@@ -203,3 +203,36 @@ nav {
 .dropdown-content a:hover {
     background-color: #2c3e50;
 }
+
+#copyright-symbol {
+    font-size: 16px;
+    cursor: pointer;
+}
+
+/* Styles for modal */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.7);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 3rem;
+    cursor: pointer;
+}
