--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html{
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #e90849;
+    /* background-color: #e90849; */
     /* background-image: url(../images/swami.jpg);
     background-repeat: no-repeat; */
     background-image: url('../images/3.jpg'); 
