--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     /* background-color: #e90849; */
     /* background-image: url(../images/swami.jpg);
     background-repeat: no-repeat; */
-    background-image: url('../images/3.jpg'); 
+    background-image: url('images/3.jpg'); 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
