--- a/style.css
+++ b/style.css
@@ -18,14 +18,14 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    position: fixed;
+    /* position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: -1;
     color: #333;
-    min-height: 100%;
+    min-height: 100%; */
     display: flex;
     flex-direction: column;
 }
