--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html{
 
 body {
     font-family: Arial, sans-serif;
-    background-image: url('images/3.jpg'); 
+    background-image: url('images/3.jpeg'); 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
