--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ p img{
 video{
     height: 20rem;
     width: 40rem;
+    object-fit:cover;
 }
 .container {
     max-width: 960px;
@@ -276,10 +277,6 @@ nav {
     transform: translateY(0);
     opacity: 1;
 }
-
-
-
-
 
 
 
