--- a/style.css
+++ b/style.css
@@ -392,4 +392,20 @@ nav {
     #round-list li{
         margin-bottom: 10px;
     }
+    
+}
+@media only screen and (max-width: 680px) {
+    video{
+        width:30rem;
+    }
+}
+@media only screen and (max-width:500px){
+    video{
+        width: 20rem;
+    }
+}
+@media only screen and (max-width: 340px){
+    video{
+        width: 15rem;
+    }
 }
