--- a/style.css
+++ b/style.css
@@ -13,13 +13,15 @@ html{
 
 body {
     font-family: Arial, sans-serif;
-    background-image: url('images/b.jpg'); 
+    /* background-image: url('images/b.jpg');  */
+    background-color: #012045;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
 }
+
 main {
     flex-grow: 1; 
   }
@@ -30,7 +32,7 @@ p img{
 video{
     height: 20rem;
     width: 40rem;
-    object-fit:cover;
+    object-fit: fill;
 }
 .container {
     max-width: 960px;
@@ -38,7 +40,7 @@ video{
     padding: 20px;
 }
 nav, .navbar{
-    background-color: rgba(0, 0, 0, 0.8);
+    /* background-color: rgba(0, 0, 0, 0.8); */
     color: white;
 }
 #navbar{
@@ -120,10 +122,10 @@ nav {
 
 .quiz-container {
     width: 100%;
-    background-color: white;
+    /* background-color: white; */
     padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    /* border-radius: 10px; */
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); */
 }
 
 .question-container {
@@ -133,6 +135,7 @@ nav {
     text-align: center;
     font-size: 3rem;
     font-weight: 600;
+    color: white;
 }
 
 #show-ans-btn {
@@ -175,13 +178,20 @@ nav {
 
 #answer-text {
   text-align: center;
-  color: green;
+  color: rgb(249, 228, 1);
   font-weight: 900;
   font-size: 3rem;
 }
+.sec-container {
+    display: flex;
+    flex-direction: row-reverse;
+}
+.duration-btn{
+    margin: 1rem;
+}
 .button-container{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 .dropdown {
     position: relative;
@@ -228,7 +238,18 @@ nav {
     display: none;
 }
 
-
+#timeout-text{
+    color: white;
+    font-weight: bold;
+}
+.duration-btn{
+    border: none;
+    background-color: rgb(13, 192, 204);
+    color: white;
+    padding:3px;
+    border-radius: 3px;
+    cursor: pointer;
+}
 
 
 @media only screen and (max-width: 1440px) {
